--- a/GetFit/package.json
+++ b/GetFit/package.json
@@ -1,5 +1,21 @@
 {
   "dependencies": {
-    "mongodb": "^7.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
+    "react-router-dom": "^7.9.6"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/register": "^7.28.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "chai": "^4.5.0",
+    "mocha": "^11.7.5",
+    "supertest": "^7.1.4"
+  },
+  "scripts": {
+    "test": "mocha --require @babel/register \"test/**/*.test.js\""
   }
 }
