--- a/GetFit/frontend/package.json
+++ b/GetFit/frontend/package.json
@@ -6,8 +6,9 @@
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/lab": "^7.0.1-beta.19",
-    "@mui/material": "^7.3.5",
+    "@mui/material": "^7.3.6",
     "@mui/x-charts": "^8.19.0",
     "@mui/x-date-pickers": "^8.19.0",
     "@mui/x-date-pickers-pro": "^8.19.0",
