--- a/GetFit/package.json
+++ b/GetFit/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "sinon": "^21.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
