--- a/GetFit/package.json
+++ b/GetFit/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "react-router-dom": "^7.9.6",
-    "sinon": "^21.0.1"
+    "sinon": "^21.0.1",
+    "socket.io": "^4.8.3",
+    "suite": "^0.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
@@ -14,10 +19,15 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "chai": "^4.5.0",
+    "chai-http": "^5.1.2",
+    "jest": "^30.2.0",
     "mocha": "^11.7.5",
+    "mongodb-memory-server": "^11.0.1",
     "supertest": "^7.1.4"
   },
   "scripts": {
-    "test": "mocha --require @babel/register \"test/**/*.test.js\""
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "mocha --require @babel/register \"test/unit/**/*.test.js\"",
+    "test:integration": "jest test/integration --testTimeout=20000"
   }
 }
