--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,12 @@ jobs:
     # BACKEND
     - name: Install backend dependencies
       run: |
-        cd backend
+        cd Backend
         npm install
 
     - name: Run backend tests
       run: |
-        cd backend
+        cd Backend
         npm test --if-present
 
     # FRONTEND
